 syntax = "proto3";

package connectivity;

import public "pod.proto";
import public "node.proto";

service Connectivity {
    rpc Sync (stream Msg) returns (stream Cmd);
}

message Ack {
    oneof hash {
        // sha256 hex string
        string sha256 = 1;
    }
}

message Data {
    enum Kind {
        STDOUT = 0;
        STDERR = 1;
        OTHER = 2;
    }

    Kind kind = 1;

    bytes data = 11;
}


message Msg {
    uint64 session_id = 1;
    bool completed = 2;

    oneof msg {
        NodeInfo node_info = 11;
        // used by list and device active pod update
        PodInfo pod_info = 12;
        // messages
        Data pod_data = 13;
        // ack info
        Ack ack = 14;
    }
}

message Cmd {
    uint64 session_id = 1;

    oneof cmd {
        NodeCmd node_cmd = 11;
        PodCmd pod_cmd = 12;
    }
}
