syntax = "proto3";

package connectivity;

message PodInfo {
    oneof pod {
        // protobuf bytes of corev1.Pod
        bytes podv1 = 1;
    }
}

message PodIdentity {
    string namespace = 1;
    string name = 2;
}

message PodCmd {
    enum Action {
        CreateOrUpdate = 0;
        Delete = 1;
        List = 2;
        Exec = 3;
        Attach = 4;
        Log = 5;
        PortForward = 6;
        Data = 7;
        ResizeTty = 8;
    }

    PodIdentity id = 1;
    Action action = 2;

    oneof options {
        // used by create or update
        PodCreateOptions create_options = 11;
        // used by delete
        PodDeleteOptions delete_options = 12;
        // used by list
        PodListOptions list_options = 13;
        // used by log
        PodLogOptions log_options = 14;
        // used by exec and attach
        PodExecOptions exec_options = 15;
        // used by port forward
        PodPortForwardOptions port_forward_options = 16;
        // used in exec, attach, portforward session
        PodDataOptions data_options = 17;
        // used in exec, attach session
        TtyResizeOptions resize_options = 18;
    }
}

message PodCreateOptions {
    oneof pod_spec {
        // protobuf bytes of corev1.PodSpec
        bytes pod_spec_v1 = 1;
    }
}

message PodDeleteOptions {
    int64 grace_time = 1;
}

message PodListOptions {
}

message PodLogOptions {
    oneof log_options {
        // protobuf bytes of corev1.PodLogOptions
        bytes log_options_v1 = 1;
    }
}

message PodExecOptions {
    oneof exec_options {
        // protobuf bytes of corev1.PodExecOptions
        bytes exec_options_v1 = 1;
    }
}

message PodPortForwardOptions {
    oneof portforward_options {
        // protobuf bytes of corev1.PodPortForwardOptions
        bytes portforward_options_v1 = 1;
    }
}

message PodDataOptions {
    bool completed = 1;

    bytes data = 11;
}

message TtyResizeOptions {
    uint32 cols = 1;
    uint32 rows = 2;
}

message PodData {
    enum Kind {
        STDOUT = 0;
        STDERR = 1;
        OTHER = 2;
    }

    Kind kind = 1;

    bytes data = 11;
}
